# product_intelligence_system

./: Industrial_Product_Configurator_Presentation.pptx  New Text Document.txt  TechTalk_Slides_Content.md  main.py  pyproject.toml  requirements.txt  techtalk.docx
backend/: clarification.py  crew_setup.py  main.py  query_parser.py  schemas.py  session_manager.py
backend/agents/: embeddings.py  retriever.py
backend/data/: tools.json
backend/vector_store/: tools.index
frontend/: app.py
